# Systeme_de_Telemedecine_et_de_Diagnostic_par_Intelligence_Artificielle_Au_CAMEROUN

./: .gitattributes  .gitignore  AUDIT_SIMULATION_NATIONAL.md  CHECKLIST_PERFECTION.md  CPP_PROJECT_MIGRATION.md  CPP_QUICKSTART.md  FICHIERS_LIVRES.txt  INSTRUCTIONS_PUSH.md  LANCER_SIMULATION.md  LIRE_DABORD.txt  MIGRATION_PLAN.md  Makefile  NETANIM_CONFIGURATION.md  PUSH.sh  README-TELEMED-NATIONAL.md  README.md  RESUME_EXECUTIF.md  TRANSFORMATION_V1_TO_V2.md  VERIFIER_AVANT_PUSH.sh  build.sh  cleanup-cpp-only.sh  index.html  lancer-simulation.sh  migrate.sh  package-lock.json  package.json  run-telemed-national.sh  vite.config.js
.github/workflows/: build.yml
assets/: index-BFbWJK72.js
cpp-project/: BUILD.md  CMakeLists.txt  README.md  main.cpp
cpp-project/server/: CMakeLists.txt  crow_server.cpp
cpp-project/src/: CMakeLists.txt  chatbot_engine.cpp  chatbot_engine.h  diagnostic_engine.cpp  diagnostic_engine.h  dme_system.cpp  dme_system.h  network_sim.cpp  network_sim.h
simulation/: telemed-cameroon-national.cc
slides/: presentation.html
src/: App.css  App.jsx  index.css  telemed-cameroon-national.cc
src/components/: DMESystem.jsx  Dashboard.jsx  DiagnosticAI.jsx  MedicalChatbot.jsx  NetworkSimulation.jsx
src/utils/: aiModels.js  storage.js
tools/: run_cpp_sim.sh  run_python_sim.sh
